<resources>
    <string name="app_name">YandexMap</string>
    <string name="map">Map</string>/string
    <string name="user_location">User Location</string>
    <string name="driving">Driving</string>
    <string name="mapobjects">Map Objects</string>
    <string name="search">Search</string>
    <string name="suggest">Suggest</string>
    <string name="panorama">Panorama</string>
    <string name="custom_layer">Custom Layer</string>
    <string name="masstransit_routing">Masstransit routing</string>

    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="package_name">com.droid.ykozh.yandexmap</string>
</resources>
